--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 
 <mat-toolbar color="primary">
-  <span>Welcome to {{ title }}!</span>
+  <span></span>
+  <img src="assets/img/logo.png" />
 </mat-toolbar>
 
 <app-car-list></app-car-list>
