--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span></span>
-  <img src="assets/img/logo.png" />
+  <img src="assets/logo.png" />
 </mat-toolbar>
 
 <app-car-list></app-car-list>
