Testing on production

--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
   <span></span>
-  <img src="assets/logo.png" />
+  <h2>Car Application</h2>
+  <!--<img src="assets/logo.png" />-->
 </mat-toolbar>
 
 <app-car-list></app-car-list>
